@@ -34,6 +34,7 @@ JAVA_OPTS="-Dfile.encoding=UTF-8 -server \
                          -XX:+UseG1GC -XX:SoftRefLRUPolicyMSPerMB=1 -XX:+UnlockExperimentalVMOptions \
                          -XX:G1NewSizePercent=15 -XX:G1MaxNewSizePercent=45 -XX:-OmitStackTraceInFastThrow \
                          -Djava.security.egd=file:/dev/./urandom \
+                         --enable-preview --enable-native-access=ALL-UNNAMED \
                          --add-opens java.base/java.lang=ALL-UNNAMED \
                          ${MAILBOXD_JAVA_OPTS} -Djava.io.tmpdir=/opt/zextras/mailboxd/work \
                          -Dzimbra.config=/localconfig/localconfig.xml \
